@@ -1,6 +1,6 @@
 Package: TraMineRextras
 Version: 0.7.1
-Date: 2021-01-02
+Date: 2021-01-04
 Title: TraMineR Extension
 Authors@R: c(
   person("Gilbert", "Ritschard", role = c("aut", "cre", "ths", "cph"),
