@@ -1,11 +1,11 @@
-\name{linkedseqs}
-\alias{linkedseqs}
+\name{seqpolyads}
+\alias{seqpolyads}
 
 \title{Measuring the Degree of Within-Polyadic Similarities}
 
 \description{The function computes measures of the degree of similarities within polyadic member sequences compared to randomly assigned polyadic member sequences, using sequence data generated by  \var{TraMineR}.}
 \usage{
-linkedseqs(seqlist, a=1, method="HAM", ..., w=rep(1,ncol(combn(1:length(seqlist),2))),
+seqpolyads(seqlist, a=1, method="HAM", ..., w=rep(1,ncol(combn(1:length(seqlist),2))),
               s=36963, T=1000, core=1, replace=TRUE, with.missing=FALSE, show.time=FALSE)
 }
 \arguments{
@@ -64,21 +64,21 @@ linkedseqs(seqlist, a=1, method="HAM", ..., w=rep(1,ncol(combn(1:length(seqlist)
 }
 
 \examples{
-data(linked)
-Gen <- linked$Gen
-seqGrandP <- seqdef(linked[Gen=="1st Generation",2:11])
-seqParent <- seqdef(linked[Gen=="2nd Generation",2:11])
-seqChild <- seqdef(linked[Gen=="3rd Generation",2:11])
+data(polyads)
+Gen <- polyads$Gen
+seqGrandP <- seqdef(polyads[Gen=="1st Generation",2:11])
+seqParent <- seqdef(polyads[Gen=="2nd Generation",2:11])
+seqChild <- seqdef(polyads[Gen=="3rd Generation",2:11])
 Seq <- rbind(seqGrandP,seqParent,seqChild)
 slgth <- ncol(Seq)
 colnames(Seq) <- 21:30
 seqIplot(Seq,group=Gen,ylim=c(10,0),ylab="Triad",xlab="Age")
 seqL <- list(seqGrandP,seqParent,seqChild)
 core=1
-seqG2.Tim <- linkedseqs(seqL[1:2],method="HAM",a=1,core=core,T=100)
-seqG3.Tim <- linkedseqs(seqL,method="HAM",a=1,core=core,T=100)
-seqG2.Dur <- linkedseqs(seqL[1:2],method="CHI2",step=slgth,core=core,T=100)
-seqG3.Dur <- linkedseqs(seqL,method="CHI2",step=slgth,core=core,T=100)
+seqG2.Tim <- seqpolyads(seqL[1:2],method="HAM",a=1,core=core,T=100)
+seqG3.Tim <- seqpolyads(seqL,method="HAM",a=1,core=core,T=100)
+seqG2.Dur <- seqpolyads(seqL[1:2],method="CHI2",step=slgth,core=core,T=100)
+seqG3.Dur <- seqpolyads(seqL,method="CHI2",step=slgth,core=core,T=100)
 
 }
 
